--- a/src/main/webapp/mystyle.css
+++ b/src/main/webapp/mystyle.css
@@ -12,10 +12,9 @@ a {
 	text-decoration: none;
 }
 
-.index_options {
+.flex_options {
 	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
+	justify-content:space-around;
 }
 
 @media screen and (max-width: 900px) {
@@ -24,56 +23,57 @@ a {
    }
 }
 
-.index_visitor {
-	background: rgb(36,0,0);
-	background: linear-gradient(45deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
+.flex_card {
+	text-align: center;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
 	transition: 0.3s;
 	border-radius: 12px;
 	padding: 90px;
+	max-width: 90px;
 }
 
-.index_visitor:hover {
-	background: rgb(36,0,0);
-	background: linear-gradient(135deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
+.flex_card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
 	transform: scale(1.2);
 }
+
+.index_visitor {
+	background: rgb(36,0,0);
+	background: linear-gradient(45deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
+}
+
+/*.index_visitor:hover {
+	background: rgb(36,0,0);
+	background: linear-gradient(135deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
+	
+}*/
 
 .index_exhibitor {
 	background: rgb(2, 0, 36);
-	background : linear-gradient( 90deg, rgba( 2, 0, 36, 1) 0%, rgba( 9, 9, 121, 1) 36%, rgba( 0, 121, 255, 1) 100%);
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
-	transition: 0.3s;
-	border-radius: 12px; /* 5px rounded corners */
-	padding: 90px;
-	background: linear-gradient(45deg, rgba(2, 0, 36, 1) 0%,
-		rgba(9, 9, 121, 1) 36%, rgba(0, 121, 255, 1) 100%);
+	background : linear-gradient(45deg, rgba( 2, 0, 36, 1) 0%, rgba( 9, 9, 121, 1) 36%, rgba( 0, 121, 255, 1) 100%);
 }
 
-.index_exhibitor:hover {
+/*.index_exhibitor:hover {
 	background: rgb(2, 0, 36);
 	background : linear-gradient( 90deg, rgba( 2, 0, 36, 1) 0%, rgba( 9, 9, 121, 1) 36%, rgba( 0, 121, 255, 1) 100%);
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
 	transform: scale(1.2);
-	background: linear-gradient(135deg, rgba(2, 0, 36, 1) 0%,
-		rgba(9, 9, 121, 1) 36%, rgba(0, 121, 255, 1) 100%);
-}
+}*/
 
 .index_manager {
 	background: rgb(6,36,0);
 	background: linear-gradient(45deg, rgba(6,36,0,1) 0%, rgba(17,121,9,1) 36%, rgba(35,255,0,1) 100%);
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
-	transition: 0.3s;
-	border-radius: 12px; /* 5px rounded corners */
-	padding: 90px;
 }
 
-.index_manager:hover {
+/*.index_manager:hover {
 	background: rgb(6,36,0);
 	background: linear-gradient(135deg, rgba(6,36,0,1) 0%, rgba(17,121,9,1) 36%, rgba(35,255,0,1) 100%);
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
 	transform: scale(1.2);
+}*/
+
+input {
+	width: 200px;
 }
 
 .visitor_login_input {
@@ -82,6 +82,11 @@ a {
 	border-radius: 12px;
 	color: #F2F2F2;
 	padding: 7px;
+}
+
+.view_exhibits_option {
+	background: rgb(36,0,0);
+	background: linear-gradient(45deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
 }
 
 .exhibitor_login_input {
