--- a/src/main/webapp/mystyle.css
+++ b/src/main/webapp/mystyle.css
@@ -14,7 +14,8 @@ a {
 
 .flex_options {
 	display: flex;
-	justify-content:space-around;
+	flex-flow: row;
+	justify-content: space-around;
 }
 
 @media screen and (max-width: 900px) {
@@ -30,11 +31,49 @@ a {
 	border-radius: 12px;
 	padding: 90px;
 	max-width: 90px;
+	
+	border-color: rgb(36,0,0);
+	border-color: linear-gradient(45deg, rgba(36,0,0,1) 0%, rgba(121,9,9,1) 36%, rgba(255,42,0,1) 100%);
+	border-style: solid;
+	border-width: 11px;
 }
 
 .flex_card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.7);
 	transform: scale(1.2);
+}
+
+.gradient-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 90%;
+  margin: auto;
+  max-width: 22em;
+  position: relative;
+  padding: 2em;
+  box-sizing: border-box;
+  color: #F2F2F2;
+  background: rgb(22, 21, 27);
+  background-clip: padding-box;
+  /* !importanté */
+  border: solid 5px transparent;
+  /* !importanté */
+  border-radius: 1em;
+}
+.gradient-box:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -5px;
+  /* !importanté */
+  border-radius: inherit;
+  /* !importanté */
+  background: linear-gradient(to right, red, orange);
 }
 
 .index_visitor {
